--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="resources/lua.ico" type="image/x-icon">
-    <title>Status SABRE</title>
+    <title>Histórico SABRE</title>
     <!-- Arquivos locais -->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
     <header>
-        <h1> Hello world </h1>
+        <h1> Cabeçalho </h1>
     </header> 
     <div class="main_div" id="main">
         <div class="decoder_input">
@@ -18,11 +18,11 @@
                 <img src="resources/latam-logo.png">
             </div>
             <div class="input">
-                <textarea spellcheck="false" id="input"></textarea>
-                <button onclick="update()">Analisar</button>
+                <textarea spellcheck="false" id="input" placeholder="Digite algo..."></textarea>
+                <button class="updateBt">Analisar</button>
             </div>
         </div>
     </div>
-    <script src="js/decoder.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
