--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="resources/lua.ico" type="image/x-icon">
     <title>Histórico SABRE</title>
     <!-- Arquivos locais -->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
     <header>
-        <h1> Cabeçalho </h1>
+        <h1> STATUS SABRE </h1>
     </header> 
     <div class="main_div" id="main">
         <div class="decoder_input">
