melhora do desing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1> STATUS SABRE </h1>
+        <h1> HISTÓRICO SABRE </h1>
     </header> 
     <div class="main_div" id="main">
         <div class="decoder_input">
@@ -17,7 +17,7 @@
                 <img src="resources/latam-logo.png">
             </div>
             <div class="input">
-                <textarea spellcheck="false" id="input" placeholder="Digite algo..."></textarea>
+                <textarea spellcheck="false" id="input" placeholder="Copie e cole o código presente na reserva..."></textarea>
                 <button class="updateBt">Analisar</button>
             </div>
         </div>
